--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,11 @@ description = "Tool for the automated projection photo analysis of black-printed
 authors = ["Bastian Ebeling <mail@bastianebeling.org>"]
 
 [tool.poetry.dependencies]
-python = ">=3.7,<3.11"
+python = "3.7.0"
 numpy = "*"
 matplotlib = "*"
 scipy = {path = "packages/scipy-1.7.3-cp37-cp37m-linux_armv7l.whl"}
+scikit-image = "^0.19.1"
 
 [tool.poetry.dev-dependencies]
 pyright = "^0.0.13"
