--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ authors = ["Bastian Ebeling <mail@bastianebeling.org>"]
 
 [tool.poetry.dependencies]
 python = "3.7.0"
-numpy = "*"
-matplotlib = "*"
+numpy = "1.21.5"
+matplotlib = "3.5.1"
 scipy = {path = "packages/scipy-1.7.3-cp37-cp37m-linux_armv7l.whl"}
 scikit-image = "^0.19.1"
 
