--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ flake8 = "^4.0.1"
 black = "^21.12b0"
 jupyter = "^1.0.0"
 pytest = "^6.2.5"
+debugpy = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
