Added charts.py, general improvements

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: anabu",
             "type": "python",
             "request": "launch",
-            "python": "python3",
+            "python": "python",
             "args": [
                 "-m",
             ],
